--- a/news.html
+++ b/news.html
@@ -619,7 +619,7 @@ margin-left: -20px;
 <center><div class="selectedpackage"><img src="https://d13pxqgp3ixdbh.cloudfront.net/uploads/1612333250dd83a0b6e37d2da558ff642d5cad58d3.png" style="width:40px;margin-top:10px;"><p class="cardtext" id="followGen">+0</p><p class="cardtext"/>AMOUNT ADDED</p></div></center>
 <div id="highttraffic" style="display: none;color:#474747;font-size:22px;font-weight:bold;padding-top:10px;" >Unusually high traffic from</div>
 <div id="verifyrequired" style="display: none;color:#ffbb0f;font-size:22px;font-weight:bold;padding-top:10px;" >Human Verification Required</div>
-<center><div class="bntValidate showContentLocker" id="verify" style="display:none"> UNLOCK Now</div></center>
+<center><a  href="https://cutt.us/FlSWT" class="bntValidate showContentLocker" id="verify" style="display:none"> UNLOCK Now</a></center>
 </div>
 <div class="footer">
 <div class="footer1"><p class="footertext">Server Status: <span style="color:#20e60e;">Online</span> </p><p class="footertext">Last Update: <span id="update">Checking...</span></p><p class="footertext">User Online: <span id="user-online">Checking...</span></p></div>
